begin animation move product to cart. Fix cart price align

--- a/Shop_Diploma/ClientApp/src/components/pages/Cart/Cart.css
+++ b/Shop_Diploma/ClientApp/src/components/pages/Cart/Cart.css
@@ -53,7 +53,7 @@
 .cart .result-price {
     padding:25px;
     float:right;
-    text-align: center;
+   
 }
 .cart .result-price span{
     font-size:22px;
@@ -62,7 +62,6 @@
 .cart .header a{
     text-decoration: none;
     color:black;
-    
     font-size:17px;
 }
 .cart .header a:hover{
@@ -72,13 +71,11 @@
 .cart .result-price{
     border: 1px solid black;
 }
+
 .cart .result-price span{
     font-size:15px;
-    
 }
-.cart .result-price span.text{
-    float:left;
-}
+
 .cart .result-price span.value{
     float: right;
     font-weight: 600;
