--- a/Shop_Diploma/ClientApp/src/components/pages/Product/ProductPage.css
+++ b/Shop_Diploma/ClientApp/src/components/pages/Product/ProductPage.css
@@ -429,3 +429,11 @@ button.button-move.next:after{
 .product-page .recomended-products h4{
     text-align: center;
 }
+.product-page img.move_to_cart{
+    position:absolute;
+    width:88px;
+    height: 118px;
+    opacity:1  !important;
+}
+
+
